--- a/README.Rmd
+++ b/README.Rmd
@@ -70,9 +70,9 @@ bm <- lapply(10 ^ (1:5), function(size) {
 	}) 
 
 bind_rows(bm) %>%
-	ggplot(aes(x = size, y = median, colour = expression)) +
+	ggplot(aes(x = size, y = 1e3 * median, colour = expression)) +
 		geom_line() +
 		scale_x_continuous(trans = "log10") +
-		scale_y_continuous("median (s)")
+		scale_y_continuous("median (ms)", trans = "log10")
 
 ```
